# AI-Chat-Bot

./: README.md  chatbot-masterplan.md  setup_local.zsh
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/models/: message.rs
backend/src/routes/: mod.rs  ws.rs
backend/src/services/: ai_model.rs  chat_server.rs  chat_session.rs  mod.rs
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Message.tsx
frontend/src/pages/: ChatPage.tsx
frontend/src/services/: websocket.ts
frontend/src/types/: ChatMessage.ts
