[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
ollama-rs = { path = "../../ollama-rs", features = ["stream", "chat-history"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.10.0", features = ["v4", "serde"] }